--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1663,11 +1663,29 @@
    "source": [
     "**Summary**:  Drivers who are travelling  with their partners and frequent to high end restaurant have high chance of accepting the coupons. The income of drivers does not have any coorelation to accepting the coupons."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Next Steps**:\n",
+    "\n",
+    "1. **Conduct Comprehensive Analysis of All Coupon Types**: Examine the remaining types of coupons to understand how different attributes affect their acceptance rates.\n",
+    "2. **Develop a Predictive Model**: Create a model using the analyzed data to predict coupon acceptance.\n",
+    "3. **Validate the Model**: Test the model's accuracy and reliability using a separate test dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.12.3 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1681,7 +1699,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
